@@ -10,6 +10,7 @@
     MP1: synchronize with MP2 version.
     Abstract common MP1/MP2 code into ::Base package.
     Move ::Util code into ::Base
+    use Class::Accessor::Fast to generate accessors
 
 Release 0.90
     changed LICENSE information in README removed "same terms as perl" and be
